--- a/src/global/mediaqueries.scss
+++ b/src/global/mediaqueries.scss
@@ -3,6 +3,7 @@
 @import './node_modules/lyne-design-tokens/dist/scss/variables.scss';
 
 $mq-breakpoints: (
+  zero: $breakpoint-zero-min, // 0
   micro: $breakpoint-micro-min, // 360
   small: $breakpoint-small-min, // 600
   medium: $breakpoint-medium-min, // 840
