feat: introduce card spacing variants

--- a/src/components/lyne-product-ticket/styles/lyne-product-ticket.component.scss
+++ b/src/components/lyne-product-ticket/styles/lyne-product-ticket.component.scss
@@ -7,11 +7,22 @@
   --slot-icon-spacing-inline: var(--spacing-fixed-4x);
   --slot-connection-details-spacing-top: var(--spacing-fixed-2x);
   --slot-action-spacing-top: var(--spacing-fixed-4x);
+
+  @include card-host-properties;
 }
 
 /* ************************************************* */
 /* Layout & spacing                                  */
 /* ************************************************* */
+
+.product-ticket {
+  @include card;
+  @include card--xxl;
+}
+
+.product-ticket--tall {
+  @include card--m--tall;
+}
 
 .product-ticket__icon {
   //not visible until breakpoint medium
