refactor: unify visually-hidden hidden syntax

--- a/src/components/lyne-journey-header/styles/lyne-journey-header.component.scss
+++ b/src/components/lyne-journey-header/styles/lyne-journey-header.component.scss
@@ -40,10 +40,11 @@
   @include title-5();
 }
 
-// TODO re-factor to a more generic class later, also see .title--hidden
-.connection-text-hidden {
+.connection--visually-hidden {
   @include screenReaderOnly();
 }
+
+.connection--visual  {}
 
 .icon {
   display: flex;
