--- a/src/components/lyne-product/styles/lyne-product.component.scss
+++ b/src/components/lyne-product/styles/lyne-product.component.scss
@@ -4,6 +4,7 @@
 @include host-component-properties;
 
 :host {
+  @include card-host-properties;
   --slot-icon-spacing-inline: var(--spacing-fixed-4x);
   --slot-connection-details-spacing-top: var(--spacing-fixed-2x);
   --slot-action-spacing-top: var(--spacing-fixed-4x);
@@ -12,6 +13,11 @@
 /* ************************************************* */
 /* Layout & spacing                                  */
 /* ************************************************* */
+
+.product {
+  @include card;
+  @include card--m;
+}
 
 .product__icon {
   display: none;
