--- a/src/components/lyne-autocomplete-list/styles/lyne-autocomplete-list.component.scss
+++ b/src/components/lyne-autocomplete-list/styles/lyne-autocomplete-list.component.scss
@@ -5,10 +5,42 @@
 
 :host {
   display: block;
-
-  --some-color-var: black;
 }
 
-.some-class {
-  color: var(--some-color-var);
+.autocomplete-list__list {
+  @include listReset;
+  position: absolute;
+  display: none;
+  z-index: -1;
+  cursor:default;
+
+  top: calc(100% - #{pxToRem(var(--input-height))});
+  right: 0;
+  left: 0;
+
+  padding-block-start: calc(#{pxToRem(var(--input-height))} + #{pxToRem(var(--spacing-fixed-3x))});
+  padding-block-end: pxToRem(var(--spacing-fixed-3x));
+  border-radius: pxToRem(var(--border-radius-4x));
+
+  padding-inline-start: pxToRem(var(--spacing-responsive-xxxs-zero));
+  padding-inline-end: pxToRem(var(--spacing-responsive-xxxs-zero));
+
+  box-shadow:
+  pxToRem(var(--shadow-elevation-level-5-shadow-1-offset-x)) pxToRem(var(--shadow-elevation-level-5-shadow-1-offset-y)) pxToRem(var(--shadow-elevation-level-5-shadow-1-blur)) pxToRem(var(--shadow-elevation-level-5-shadow-1-spread)) var(--shadow-elevation-level-5-soft-1-color),
+  pxToRem(var(--shadow-elevation-level-5-shadow-2-offset-x)) pxToRem(var(--shadow-elevation-level-5-shadow-2-offset-y)) pxToRem(var(--shadow-elevation-level-5-shadow-2-blur)) pxToRem(var(--shadow-elevation-level-5-shadow-2-spread)) var(--shadow-elevation-level-5-soft-2-color);
+
+  overflow-y: scroll;
+
+  @include mq($from: medium) {
+    padding-inline-start: pxToRem(var(--spacing-responsive-xxxs-medium));
+    padding-inline-end: pxToRem(var(--spacing-responsive-xxxs-medium));
+  }
+}
+
+.autocomplete-list__list--visible {
+  display: block;
+}
+
+.autocomplete-list__accessibility-hint {
+  @include screenReaderOnly;
 }
