--- a/src/components/lyne-timetable-button/styles/lyne-timetable-button.component.scss
+++ b/src/components/lyne-timetable-button/styles/lyne-timetable-button.component.scss
@@ -3,12 +3,11 @@
 // and default mode
 @include host-component-properties;
 
-:host {
-  display: block;
-
-  --some-color-var: black;
+button {
+  width: 100%;
+  padding: 0;
 }
 
-.some-class {
-  color: var(--some-color-var);
+.button--earlier-connections .button__chevron svg {
+  transform: rotate(180deg);
 }
