--- a/src/components/lyne-timetable-duration/styles/lyne-timetable-duration.component.scss
+++ b/src/components/lyne-timetable-duration/styles/lyne-timetable-duration.component.scss
@@ -1,11 +1,8 @@
-:host {
-  display: block;
-  align-self: flex-end;
-}
-
 .duration {
   @include text-s--regular();
+  line-height: pxToRem(19);
   margin: 0;
+  white-space: nowrap;
 }
 
 .duration__text--visually-hidden {
