--- a/src/components/lyne-timetable-transportation-time/styles/lyne-timetable-transportation-time.component.scss
+++ b/src/components/lyne-timetable-transportation-time/styles/lyne-timetable-transportation-time.component.scss
@@ -15,18 +15,30 @@
 }
 
 .time {
-  @include text-s--bold();
   min-width: pxToRem(var(--transportation-min-width));
   margin: 0;
   font-variant-numeric: tabular-nums;
 }
 
 .time--departure {
+  @include text-s--bold();
+}
+
+.time--first-level.time--departure {
   margin-inline-end: pxToRem(var(--spacing-fixed-3x));
 }
 
-.time--arrival {
+.time--first-level.time--arrival {
+  @include text-s--bold();
   margin-inline-start: pxToRem(var(--spacing-fixed-3x));
+}
+
+.time-second-level.time--departure {
+  @include text-s--bold();
+}
+
+.time--second-level.time--arrival {
+  @include text-s--regular();
 }
 
 .time__text--visually-hidden {
