--- a/src/global/mixins.scss
+++ b/src/global/mixins.scss
@@ -1,6 +1,7 @@
 @import "mixins/mixins_a11y";
 @import "mixins/mixins_buttons";
 @import "mixins/mixins_typo";
+@import "mixins/mixins_shadows";
 
 @mixin listReset {
   list-style: none;
