fix: define forced colors

--- a/src/components/lyne-text-input/styles/lyne-text-input.component.scss
+++ b/src/components/lyne-text-input/styles/lyne-text-input.component.scss
@@ -69,6 +69,10 @@
 .input--no-border {
   border: none;
   @include shadowElevationLevel5;
+
+  @include ifForcedColors() {
+    border: pxToRem(1) solid CanvasText;
+  }
 }
 
 // Input Variant
