fix: define forced colors

--- a/src/components/lyne-autocomplete-item/styles/lyne-autocomplete-item.component.scss
+++ b/src/components/lyne-autocomplete-item/styles/lyne-autocomplete-item.component.scss
@@ -34,6 +34,11 @@
 .autocomplete-item:hover,
 .autocomplete-item:focus {
   background-color: var(--color-milk-default);
+
+  @include ifForcedColors() {
+    background-color: Highlight;
+    color: HighlightText;
+  }
 }
 
 .autocomplete-item > span {
