--- a/src/global/mixins/mixins_card.scss
+++ b/src/global/mixins/mixins_card.scss
@@ -22,8 +22,12 @@
   position: relative;
   overflow: hidden;
 
-  &:hover {
+  &:hover, &:focus {
+    @include shadow-level-9-hard;
 
+    // --card-padding-top: calc(#{pxToRem(var(--card-padding-top))} - 2px);
+    // --card-padding-bottom: calc(#{pxToRem(var(--card-padding-bottom))} + 2px);
+    //--card-padding-bottom: calc(calc(var(--card-padding-top) / var(--typo-scale-default) * 1rem) + 2px);
   }
 }
 
